--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 subprojects {
     apply plugin: "kotlin"
 
-    group = "io.github.sorafx"
+    group = "org.sorafx"
     version = sorafx_version
 
     sourceCompatibility = 1.8
@@ -33,7 +33,7 @@ subprojects {
         compile "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
         // test
-        testCompile "junit:junit:4.+"
+        testCompile "com.github.rabitarochan:kotassert:0.+"
     }
 }
 
